--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -4,3 +4,18 @@
     background-color: red;
     width: 100px;
 }
+
+.card-course-item {
+    margin-top: 10px;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
